--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,1 +1,6 @@
-FROM maven:3.5-jdk-8
+FROM frolvlad/alpine-oraclejdk8:slim
+VOLUME /tmp
+ADD target/com.hellokoding-1.5.8.RELEASE.jar  app.jar
+RUN sh -c 'touch /app.jar'
+ENV JAVA_OPTS=""
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
